<resources>
    <string name="app_name">KartyaOlvaso</string>
    <string name="flip_view_string">Nézet tükrözése</string>
    <string name="data_file_url_default">http://</string>
    <string name="data_file_url_title">Adat File URL</string>
    <string name="meal_names_menu_title">Étkezések beállításai</string>
    <string name="meal1_default">Reggeli</string>
    <string name="meal1_title">1. étkezés neve</string>
    <string name="meal2_default">Tízórai</string>
    <string name="meal2_title">2. étkezés neve</string>
    <string name="meal3_default">Ebéd</string>
    <string name="meal3_title">3. étkezés neve</string>
    <string name="meal4_default">Uzsonnna</string>
    <string name="meal4_title">4. étkezés neve</string>
    <string name="meal5_default">Vacsora</string>
    <string name="meal5_title">5. étkezés neve</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Beállítások</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="meal1_start_time_title">1. étkezés kezdete:</string>
    <string name="meal2_start_time_title">2. étkezés kezdete:</string>
    <string name="meal3_start_time_title">3. étkezés kezdete</string>
    <string name="meal4_start_time_title">4. étkezés kezdete</string>
    <string name="meal5_start_time_title">5. étkezés kezdete</string>
    <string name="str_no_meal_time">Nincs étkezési idő</string>
    <string name="meal6_start_time_title">Étkezések vége</string>
    <string name="feedback_customer_default">Kérem a következőt!</string>
    <string name="fbc_valid_for_meal">Jó étvágyat!</string>
    <string name="fbc_aldready_used">A kártya már volt használva!</string>
    <string name="fbc_different_location">A kártya nem ehhez az intéményhez tartozik!</string>
    <string name="fbc_in_not_in_use">A kártya nincs használatban!</string>
    <string name="fbc_no_current_meal">Nincs befizetés a mostani étkezésre!</string>
    <string name="fbc_invalid">Ismeretlen kártya kód!</string>
    <string name="wait_time_after_ok_title">Érvényes kártya utáni várakozás (sec)</string>
    <string name="wait_time_after_notok_title">Érvénytelen kártya utáni várakozás (sec)</string>
    <string name="card_read_history_title">Kártyaolvasási Napló</string>
</resources>
